crates/obzenflow_runtime/tests/compile_fail/trace_invariant_minter_is_in_crate.stderr
error[E0624]: associated function `__minted_by_trace_invariant_attribute` is private
  --> tests/compile_fail/trace_invariant_minter_is_in_crate.rs:11:35
   |
11 |     let _ = TraceInvarianceProof::__minted_by_trace_invariant_attribute();
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private associated function
   |
  ::: src/stages/common/handlers/input_order.rs
   |
   |     pub(crate) const fn __minted_by_trace_invariant_attribute() -> Self {
   |     ------------------------------------------------------------------- private associated function defined here
